--- a/test/deltares_testbench/doc/readme-testbench.tex
+++ b/test/deltares_testbench/doc/readme-testbench.tex
@@ -394,9 +394,9 @@ The test bench can compare floating point numbers, for example when the type of 
 
 For example, we can check a parameter \verb|x| in a NetCDF file with the following line in the XML,
 \begin{verbatim}
-<parameter name="x" toleranceAbsolute="2.0" toleranceRelative="0.2"/>
+<parameter name="x" toleranceAbsolute="2.5" toleranceRelative="0.2"/>
 \end{verbatim}
-and with reference data \verb|10, 12, 13| and output data \verb|12, 13, 13|. In that case the absolute errors are \verb|1, 1, 0| and the maximum absolute error is \verb|1|. The range of values in the output data runs from \verb|12| to \verb|13|, so the range is also \verb|1|. This means that the maximum relative error is $1 / 1 = 1$, which is more than the relative tolerance. However, since the absolute error is below the absolute tolerance, the check still passes.
+and with reference data \verb|10, 12, 13| and case output \verb|12, 13, 13|. In that case the absolute errors are \verb|2, 1, 0| and the maximum absolute error is \verb|2|. The range of values in the output data runs from \verb|12| to \verb|13|, so the range is \verb|1|. This means that the maximum relative error is $2 / 1 = 2$, but since we limit it to $1$, we report a relative error of $1$. This is more than the relative tolerance. However, since the absolute error is below the absolute tolerance, the check still passes.
 
 \newpage
 \section{Developers}
